--- a/src/components/searchBar/style.module.css
+++ b/src/components/searchBar/style.module.css
@@ -1,13 +1,11 @@
 .main {
 	padding: 10px;
 	height: 1.5em;
-	position: fixed;
-	top: 0;
-	right: 0;
+	display: flex;
+	justify-content: right;
 }
 .icon {
-	height: 16px;
-	margin-bottom: -4px;
+	height: 24px;
 	margin-left: -20px;
 	width: 16px;
 }
