--- a/src/components/searchBar/style.module.css
+++ b/src/components/searchBar/style.module.css
@@ -1,8 +1,9 @@
 .main {
-	padding: 10px;
+	padding: 10px 0 10px 0;
 	height: 1.5em;
 	display: flex;
 	justify-content: right;
+	margin-right: 4px;
 }
 .icon {
 	height: 24px;
