--- a/src/components/navBar/style.module.css
+++ b/src/components/navBar/style.module.css
@@ -1,9 +1,10 @@
 .main {
-	background-color: burlywood;
+	background-color: #252525;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	white-space: nowrap;
+	text-transform: uppercase;
 }
 
 .links {
@@ -13,11 +14,25 @@
 	width: auto;
 }
 .links > * {
+	height: 100%;
+	display: flex;
+	align-items: center;
 	text-decoration: none;
-	color: black;
+	color: inherit;
 	padding: 0 10px 0 10px;
+	background-color: inherit;
+	transition: background-color ease-in-out .25s;
+	border-left: 1px solid black;
+}
+.links > *:hover {
+	background-color: #525252;
+	transition: background-color ease-in-out .25s;
 }
 
 .title {
 	padding-left: 10px;
+}
+
+.selected {
+	background-color: #525252;
 }
