--- a/src/components/bigItem/style.module.css
+++ b/src/components/bigItem/style.module.css
@@ -1,9 +1,33 @@
-.itemCard {
+.itemCard, .text {
 	display: flex;
 	flex-direction: column;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 25px;
+	text-transform: uppercase;
 }
 
-.image {
+.itemCard > img {
+	width: 100%;
 	height: 200px;
-	width: auto;
+	object-fit: fill;
+}
+
+.text {
+	position: absolute;
+	bottom: 0;
+	height: 60px;
+	color: white;
+	width: 100%;
+	background: linear-gradient(0deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, 0));
+}
+
+.title {
+	font-size: 30px;
+	font-weight: bolder;
+}
+
+.description {
+	color:yellow;
 }
