--- a/src/components/main/style.module.css
+++ b/src/components/main/style.module.css
@@ -1,7 +1,7 @@
 .main {
 	display: grid;
 	grid-template-columns: 2fr 8fr;
-	height: 1000px;
 	max-width: 100%;
 	grid-gap: 1em;
+	margin: 0 1em 0 1em;
 }
