--- a/src/components/navBar/style.module.css
+++ b/src/components/navBar/style.module.css
@@ -1,5 +1,5 @@
 .main {
-	background-color: #252525;
+	background-color: #353535;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -45,4 +45,5 @@
 
 .selected {
 	background-color: #525252;
+	color: yellow;
 }
