--- a/src/components/recommendation/style.module.css
+++ b/src/components/recommendation/style.module.css
@@ -1,7 +1,7 @@
 .main {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
 	grid-gap: 25px;
 }
 
