--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 .App {
   text-align: center;
 }
@@ -40,7 +39,6 @@
 }
 
 body {
-  margin: 0 2em 0 2em;
   max-width: 1000px;
 }
 
