--- a/src/components/navBar/style.module.css
+++ b/src/components/navBar/style.module.css
@@ -1,20 +1,23 @@
 .main {
-	background-color: #353535;
+	background-image: linear-gradient(0deg, #353535, #525252, #353535);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	white-space: nowrap;
 	text-transform: uppercase;
 	margin-bottom: 2em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 .links {
-	height: 3.5em;
+	height: 3.3em;
 	display: flex;
 	align-items: center;
 	width: auto;
 }
 .links > * {
+	font-weight: bolder;
 	height: 100%;
 	display: flex;
 	align-items: center;
@@ -23,27 +26,35 @@
 	padding: 0 10px 0 10px;
 	background-color: inherit;
 	transition: background-color ease-in-out .25s;
-	border-left: 1px solid black;
+	border-left: 1px solid #353535;
 }
 .links > *:hover {
-	background-color: #525252;
+	background-image: linear-gradient(0deg, #525252, #353535, #525252);
 	transition: background-color ease-in-out .25s;
+}
+.links:last-child {
+	border-right: 1px solid #353535;
 }
 
 .title {
+	text-decoration: none;
+	color: white;
+	font-weight: bolder;
 	display: flex;
-	padding: 10px;
 	font-size: 2em;
 	margin: 0;
 }
 .specialText {
+	margin-top: 8px;
 	color: black;
 	background-color: yellow;
 	font-size: .5em;
-	height: 1em;
+	height: fit-content;
+	border-radius: 2px;
+	padding: 0 2px 0 2px;
 }
 
 .selected {
-	background-color: #525252;
+	background-image: linear-gradient(0deg, #525252, #353535, #525252);
 	color: yellow;
 }
